--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,21 +7,32 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 8px;
+  margin: 0 0 8px 0;
+  font-size: 16px;
 }
 
 .content {
+  padding: 8px;
   background: #e3f4ff;
 }
 
 .button-container {
+  padding: 8px;
   background: #e3f4ff;
+  margin: 8px auto 0 auto;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  margin: 0 auto;
+  padding: 8px;
+  display: block;
 }
