Configure header to use Flexbox

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
 
 .logo {
@@ -9,11 +13,19 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 10px auto 10px auto;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  margin: 0;
+  padding: 0 10px 0 10px;
+  height: 100%;
+
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 
 a {
