--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -13,7 +13,7 @@ img {
 }
 
 /* do not edit this footer */
-.footer {
+footer {
   position: fixed;
   bottom: 0;
   left: 0;
@@ -23,4 +23,25 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
+.plant {
+  text-align: center;
+}
+
+.plants {
+  display: flex;
+  gap: 52px;
+}
+
+.text {
+  width: 200px;
+  text-align: center;
 }
