Remove Responsive units
I feel like the solution kind of cheats, in that it solves the title
centering issue without flexbox. And this lesson was about using flex.
The flex-shrink thing is really weird. I tried that while I was
writing my solution, and it didn't do anything. I must have had a typo
somewhere that prevented the icon from being squished. Oh well. I'm
mostly happy with the way I approached the solution.

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -24,8 +24,8 @@ body {
 
 .dialog-container {
   display: flex;
-  padding: 2vw;
-  gap: 10px;
+  padding: 16px;
+  gap: 16px;
 }
 
 .dialog-content {
