--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,77 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+a {
+  font-size: 24px;
+  text-decoration: none;
+  color: white;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding-left: 16px;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  display: flex;
+  align-items: center;
+}
+
+h1 {
+  font-weight: 900;
+  font-size: 32px;
+  padding-left: 16px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 72px;
+  background: #eee;
 }
 
 .footer {
-  height: 72px;
-  background: #eee;
   color: darkmagenta;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
+  flex: 1 0 auto;
+}
+
+.middle {
+  display: flex;
+  flex-direction: row;
+  flex: 1 0 auto;
+  margin-bottom: auto;
+}
+
+.card-container {
+  display: flex;
+  flex-flow: row wrap;
+  gap: 32px;
+  padding: 32px;
+  justify-content: flex-start;
+  align-self: flex-start;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 300px;
+  height: 300px;
 }
