--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -34,17 +34,13 @@ h1 {
   padding-left: 16px;
 }
 
-footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 72px;
-  background: #eee;
-}
-
 .footer {
+  height: 72px;
   color: darkmagenta;
+  background-color: #eee;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar {
