--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -8,6 +8,16 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+
+  display: grid;
+  gap: 15px;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
+  grid-template-areas:
+    "header header"
+    "sidebar nav"
+    "sidebar article"
+    "footer footer"
 }
 
 .container div {
@@ -21,18 +31,26 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+
+  grid-area: header;
 }
 
 .sidebar {
   background-color: #FF7755;
+
+  grid-area: sidebar;
 }
 
 .nav {
   background-color: #00DDFF;
+
+  grid-area: nav;
 }
 
 .article {
   background-color: #bccbde;
+
+  grid-area: article;
 }
 
 .article p {
@@ -44,4 +62,6 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+
+  grid-area: footer;
 }
