--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -17,7 +17,7 @@ body, html {
     "header header"
     "sidebar nav"
     "sidebar article"
-    "footer footer"
+    "footer footer";
 }
 
 .container div {
