--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -7,7 +7,8 @@
   text-align: center;
 
   display: grid;
-  grid-template-columns: 1fr 5fr;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
   grid-template-rows: 1fr auto 7fr auto;
 }
 
@@ -27,15 +28,21 @@
   background-color: #393f4d;
 
   grid-column: 1 / -1;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
 }
 
 .logo {
+  justify-self: start;
 }
 
 .menu {
+  align-self: center;
 }
 
 .menu ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .menu ul,
@@ -47,6 +54,8 @@
   background-color: #FF7755;
 
   grid-row: 2 / -2;
+  display: grid;
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -87,7 +96,7 @@
   background-color: #bccbde;
 
   display: grid;
-  gap: 10px;
+  gap: 15px;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-template-rows:    repeat(auto-fill, minmax(200px, 1fr));
 }
