--- a/animation/01-button-hover/style.css
+++ b/animation/01-button-hover/style.css
@@ -8,6 +8,10 @@
   font-family: Arial, sans-serif;
 }
 
+#transition-container > button:hover {
+  transform: scale(1.2);
+}
+
 button {
   border-radius: 8px;
   border: none;
@@ -16,4 +20,5 @@ button {
   font-size: 18px;
   padding: 16px 24px;
   text-align: center;
+  transition-duration: 0.1s;
 }
