Add transition property

--- a/animation/02-pop-up/style.css
+++ b/animation/02-pop-up/style.css
@@ -41,9 +41,8 @@ button {
   text-align: center;
 
   /* animation */
+  transition: transform 0.2s ease-in-out, opacity 0.4s ease;
   transform: translate(-50%, -100%);
-  transition-duration: 0.2s;
-  transition-timing-function: ease-in-out;
 }
 .popup-modal p {
   margin-bottom: 24px;
